--- a/static/css/bulma.css
+++ b/static/css/bulma.css
@@ -289,11 +289,11 @@ html {
   box-sizing: inherit;
 }
 
-/* img,
+img,
 video {
   height: auto;
   max-width: 100%;
-} */
+}
 
 iframe {
   border: 0;
